# ggpubpy

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  build.bat  final_check.py  pre_upload_check.py  pypirc_template  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_check.py  tatus  test_significance.py
.github/workflows/: ci.yml  docs.yml  release-test.yml  release.yml
docs/: alluvial_plots.md  api.rst  bland_altman.md  boxplot.md  changelog.rst  conf.py  contributing.rst  correlation_matrix.md  examples.rst  index.rst  installation.rst  plots_manipulation.md  qqplot.md  quickstart.rst  requirements.txt  shiftplot.md  violinplot.md
examples/: alluvial_examples.py  basic_usage.py  bland_altman_example.py  boxplot_examples.py  boxplot_extra_examples.py  correlation_matrix_example.py  correlation_matrix_extra_examples.py  generate_examples.py  plots_manipulation_examples.py  qqplot_example.py  shiftplot_examples.py  shiftplot_extra_examples.py  violinplot_examples.py  violinplot_extra_examples.py
ggpubpy/: __init__.py  alluvialplot.py  bland_altman.py  boxplot.py  correlation_matrix.py  datasets.py  helper.py  plots.py  qqplot.py  shiftplot.py  violinplot.py
scripts/: new_plot_workflow.md
tests/: conftest.py  run_checks.sh  test_bland_altman.py  test_integration.py  test_plots.py  test_qqplot.py
